# vector.dev-logs-research

./: docker-compose.yaml
file_watcher/: Cargo.toml  dockerfile
file_watcher/src/: main.rs
grafana/provisioning/dashboards/: default.yaml  example-graf.json
grafana/provisioning/datasources/: datasources.yaml
log_scraper/: Cargo.toml  config.json  dockerfile
log_scraper/src/: main.rs
log_scrapper/: Cargo.toml  config.json  dockerfile
log_scrapper/src/: main.rs
log_scrapper/src/config/: mod.rs
log_scrapper/src/config_watcher/: mod.rs
log_scrapper/src/ic_node/: mod.rs
log_scrapper/src/scrapper/: mod.rs
logger/: Cargo.toml  dockerfile
logger/src/: main.rs
logger/src/log_types/: mod.rs
prometheus/: prometheus.yml
vector-aggregator/: logs.toml  metrics.toml
vector-centralized/: logs.toml  metrics.toml
