[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"]}
fake = {version = "2.5", features = ["derive"]}
serde_json = "1.0.86"
actix-web = "2.0"
actix-rt = "1.0"
